--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,40 @@
 version: '3'
 services:
+  seeds_db:
+    image: mysql:8.0
+    container_name: 'nutfes-record-db'
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+      - '3306:3306'
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  seeds_api:
+    build: ./api
+    container_name: 'SEEDS_API'
+    ports:
+      - "3000:3000"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - ./api:/myapp
+    depends_on:
+      - seeds_db
+    stdin_open: true
+    tty: true
+
   seeds_view: 
     build: ./view
     container_name: 'SEEDS_VIEW'
     ports: 
       - "8000:3000"
+    command: npm run dev
     volumes:
       - ./view:/app
     stdin_open: true
     tty: true
+
+volumes:
+  mysql-data:
+    driver: local
