--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
