--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   seeds_db:
     image: mysql:8.0
-    container_name: 'SEEDS_DB'
+    container_name: 'seeds_db'
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
@@ -13,10 +13,10 @@ services:
 
   seeds_api:
     build: ./api
-    container_name: 'SEEDS_API'
+    container_name: 'seeds_api'
     ports:
       - "3000:3000"
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: rails server -b 0.0.0.0
     volumes:
       - ./api:/myapp
     depends_on:
@@ -26,7 +26,7 @@ services:
 
   seeds_view: 
     build: ./view
-    container_name: 'SEEDS_VIEW'
+    container_name: 'seeds_view'
     ports: 
       - "8080:8080"
     command: npm run dev
