--- a/view/next-project/tsconfig.json
+++ b/view/next-project/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@assets/*": ["src/assets/*"],
       "@images/*": ["public/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
