--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:css": "stylelint './src/**/*.tsx'",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
@@ -22,8 +23,18 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "postcss-jsx": "^0.36.4",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
-    "typescript": "4.4.4"
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^14.2.0",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "4.4.4",
+    "webpack-cli": "^4.9.1"
   },
   "prettier": {
     "trailingComma": "all",
@@ -31,6 +42,7 @@
     "semi": true,
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "printWidth": 120
+    "printWidth": 120,
+    "bracketSpacing": true
   }
 }
