--- a/api/Gemfile
+++ b/api/Gemfile
@@ -30,6 +30,10 @@ gem 'devise_token_auth'
 gem 'rack-cors'
 gem 'seed-fu'
 
+# For Notification
+gem 'slack-notifier'
+gem 'dotenv-rails'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
