--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,7 +31,7 @@ services:
     container_name: 'seeds_view'
     ports: 
       - "8080:8080"
-    command: npm run build && npm run start
+        #command: npm run build && npm run start
     volumes:
       - ./view:/app
     stdin_open: true
