--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -23,6 +23,9 @@
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-css-modules": "^4.0.1",
+    "stylelint-order": "^5.0.0",
     "typescript": "4.4.4"
   },
   "prettier": {
