--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -14,6 +14,8 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.2",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
