--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     container_name: 'seeds_view'
     ports: 
       - "8080:8080"
-    command: npm run dev
+    command: sh -c "npm install && npm run dev"
     volumes:
       - ./view:/app
     stdin_open: true
