--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
 FROM ruby:2.7.1
-
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
+ 
+RUN apt-get install -y ca-certificates wget
+RUN wget -qO - https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
       && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
       && apt-get update -qq \
       && apt-get install -y nodejs yarn \
