--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -23,18 +23,18 @@
     "react-simplemde-editor": "^5.2.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "@types/react-syntax-highlighter": "^15.5.5"
   },
   "devDependencies": {
     "@types/dompurify": "^2.3.4",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
-    "@types/react-syntax-highlighter": "^15.5.5",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
-    "react-syntax-highlighter": "^15.5.0",
     "stylelint": "^14.5.3",
     "stylelint-config-css-modules": "^4.0.1",
     "stylelint-order": "^5.0.0",
