--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
-version: '3'
+version: "3"
 services:
   seeds_db:
     image: mysql:8.0
-    container_name: 'seeds_db'
+    container_name: "seeds_db"
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
-      - '3306:3306'
+      - "3306:3306"
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       - mysql-data:/var/lib/mysql
 
   seeds_api:
     build: ./api
-    container_name: 'seeds_api'
+    container_name: "seeds_api"
     ports:
       - "3000:3000"
-    command: rails server -b 0.0.0.0
+    command: /bin/sh -c "rm -f tmp/pids/server.pid &&  rails server -b 0.0.0.0"
     volumes:
       - ./api:/myapp
     depends_on:
@@ -24,10 +24,10 @@ services:
     stdin_open: true
     tty: true
 
-  seeds_view: 
+  seeds_view:
     build: ./view
-    container_name: 'seeds_view'
-    ports: 
+    container_name: "seeds_view"
+    ports:
       - "8080:8080"
     command: sh -c "npm install && npm run dev"
     volumes:
