--- a/api/Gemfile
+++ b/api/Gemfile
@@ -33,6 +33,7 @@ gem 'seed-fu'
 # For Notification
 gem 'slack-notifier'
 gem 'dotenv-rails'
+gem "whenever"
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
