--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,6 +30,18 @@ services:
       - SEEDS_API_URI=https://seeds-api.nutfes.net
       - NODE_ENV=production
 
+  # 定期実行用コンテナ
+  cron:
+    image: nutmeg-seeds_seeds_api:latest
+    command: >
+      sh -c "whenever --update-cron &&
+      cron -f -l 2"
+    restart: always
+    volumes:
+      - ./api:/usr/src/app
+    depends_on:
+      - seeds_api
+
 volumes:
   mysql-data:
     driver: local
