--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^2.0.2",
     "dompurify": "^2.4.0",
@@ -21,11 +22,10 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.2",
     "react-simplemde-editor": "^5.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^5.3.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "@types/react-syntax-highlighter": "^15.5.5"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/dompurify": "^2.3.4",
