--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -26,6 +26,8 @@
     "react-simplemde-editor": "^5.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tsparticles": "^2.7.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.3",
