--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
     "react-markdown": "^8.0.2",
     "react-particles": "^2.8.0",
     "react-simplemde-editor": "^5.2.0",
