--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -19,6 +19,7 @@
     "marked": "^4.1.1",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.2",
     "react-particles": "^2.8.0",
