--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3"
 services:
   seeds_db:
-    image: mysql:8.0
-    container_name: "seeds_db"
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-    ports:
-      - "3306:3306"
-    command: --default-authentication-plugin=mysql_native_password
+    image: postgres:12
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: myapp_development
+      POSTGRES_USER: seeds
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST_AUTH_METHOD: trust
 
   seeds_api:
     build: ./api
@@ -20,9 +19,8 @@ services:
     volumes:
       - ./api:/myapp
     depends_on:
-      - seeds_db
-    stdin_open: true
-    tty: true
+      seeds_db:
+        condition: service_started
 
   seeds_view:
     build: ./view
@@ -32,22 +30,11 @@ services:
     command: sh -c "npm install && npm run dev"
     volumes:
       - ./view:/app
-    stdin_open: true
-    tty: true
     environment:
       - SEEDS_API_URI=http://localhost:3000
-
-  # 定期実行用コンテナ
-  cron:
-    image: nutmeg-seeds-seeds_api:latest
-    command: >
-      sh -c "whenever --update-cron &&
-      cron -f -l 2"
-    restart: always
-    volumes:
-      - ./api:/usr/src/app
     depends_on:
-      - seeds_api
+      seeds_api:
+        condition: service_started
 
 volumes:
   mysql-data:
