--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,22 @@ services:
       seeds_db:
         condition: service_started
 
+  hasura:
+    build:
+      context: .docker
+      dockerfile: hasura.Dockerfile
+    container_name: "seeds_hasura"
+    ports:
+      - "8082:8080"
+    restart: always
+    volumes:
+      - ./hasura:/hasura
+    environment:
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
+      HASURA_GRAPHQL_DATABASE_URL: postgres://seeds:password@seeds_db:5432/myapp_development
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+
   seeds_view:
     build: ./view
     container_name: "seeds_view"
