[mod] hasura relation (#196)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     container_name: "seeds_hasura"
     ports:
       - "8082:8080"
-    restart: always
+    # restart: always
     volumes:
       - ./hasura:/hasura
     environment:
