--- a/hasura/metadata/databases/default/tables/public_grades.yaml
+++ b/hasura/metadata/databases/default/tables/public_grades.yaml
@@ -1,3 +1,11 @@
 table:
   name: grades
   schema: public
+array_relationships:
+  - name: user_details
+    using:
+      foreign_key_constraint_on:
+        column: grade_id
+        table:
+          name: user_details
+          schema: public
