--- a/hasura/metadata/databases/default/tables/public_projects.yaml
+++ b/hasura/metadata/databases/default/tables/public_projects.yaml
@@ -1,3 +1,18 @@
 table:
   name: projects
   schema: public
+array_relationships:
+  - name: project_skills
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          name: project_skills
+          schema: public
+  - name: project_users
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          name: project_users
+          schema: public
