--- a/hasura/metadata/databases/default/tables/public_teachers.yaml
+++ b/hasura/metadata/databases/default/tables/public_teachers.yaml
@@ -1,3 +1,10 @@
 table:
   name: teachers
   schema: public
+object_relationships:
+  - name: record
+    using:
+      foreign_key_constraint_on: record_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
