--- a/hasura/metadata/databases/default/tables/public_user_skills.yaml
+++ b/hasura/metadata/databases/default/tables/public_user_skills.yaml
@@ -1,3 +1,10 @@
 table:
   name: user_skills
   schema: public
+object_relationships:
+  - name: skill
+    using:
+      foreign_key_constraint_on: skill_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
