--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -10,12 +10,13 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: seeds
+  username: root
   password: password
   host: seeds_db
+  socket: /tmp/myapp.sock
 
 development:
   <<: *default
