--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -29,12 +29,12 @@ jobs:
       - name: Build
         working-directory: view/next-project
         run: npm run build
-      - name: Prettier
-        working-directory: view/next-project
-        run: npm run format
-      - name: Lint
-        working-directory: view/next-project
-        run: npm run lint:fix
+      # - name: Prettier
+      #   working-directory: view/next-project
+      #   run: npm run format
+      # - name: Lint
+      #   working-directory: view/next-project
+      #   run: npm run lint:fix
       - uses: stefanzweifel/git-auto-commit-action@v3.0.0
         with:
           commit_message: formatted by workflow
