--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -18,6 +18,7 @@
     "highlightjs": "^9.16.2",
     "marked": "^4.1.1",
     "next": "12.0.3",
+    "next-auth": "^4.22.1",
     "react": "17.0.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
