--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -14,9 +14,11 @@
     "babel-plugin-styled-components": "^2.0.2",
     "dompurify": "^2.4.0",
     "easymde": "^2.18.0",
+    "formidable": "^3.5.1",
     "highlight.js": "^11.6.0",
     "highlightjs": "^9.16.2",
     "marked": "^4.1.1",
+    "minio": "^7.1.3",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-data-table-component": "^7.5.3",
@@ -38,6 +40,8 @@
   },
   "devDependencies": {
     "@types/dompurify": "^2.3.4",
+    "@types/formidable": "^3.4.3",
+    "@types/minio": "^7.1.1",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
