--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -17,10 +17,10 @@
     "highlight.js": "^11.6.0",
     "highlightjs": "^9.16.2",
     "marked": "^4.1.1",
-    "next": "12.0.3",
-    "react": "17.0.2",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.2",
@@ -41,7 +41,7 @@
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.5.3",
