--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -47,7 +47,7 @@
     "stylelint": "^14.5.3",
     "stylelint-config-css-modules": "^4.0.1",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "4.9.5"
   },
   "prettier": {
     "trailingComma": "all",
