--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^2.3.4",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.5.6",
@@ -47,7 +47,7 @@
     "stylelint": "^14.5.3",
     "stylelint-config-css-modules": "^4.0.1",
     "stylelint-order": "^5.0.0",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "prettier": {
     "trailingComma": "all",
