--- a/view/Dockerfile
+++ b/view/Dockerfile
@@ -1,5 +1,11 @@
-FROM node:18.12.0
+FROM node:18.17.0
 
 WORKDIR /app/next-project
+
+RUN npm install -g npm@latest
+
+COPY ./ /app
+RUN npm install
+RUN npm run build
 
 ENV API_URL='http://localhost:3000'
