--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,6 +31,7 @@ services:
     command: bash -c "npm run start"
     volumes:
       - ./view:/app
+      - ./view/next-project/node_modules:/app/node_modules
     stdin_open: true
     tty: true
     environment:
