feature/takumi0616/create-draftpage

--- a/view/next-project/package.json
+++ b/view/next-project/package.json
@@ -9,6 +9,9 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^2.0.2",
