--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,14 +24,13 @@ services:
       - seeds.env
 
   seeds_view:
-    image: node:20.11.0
-    working_dir: /app
+    build: ./view
     container_name: "seeds_view"
     ports:
       - 8080:8080
     command: bash -c "npm run start"
     volumes:
-      - ./view/next-project/:/app
+      - ./view:/app
       - ./view/next-project/node_modules:/app/node_modules
     stdin_open: true
     tty: true
