--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,13 @@ services:
      DB_NAME: myapp_development
 
   seeds_view:
-    image: node:20.11.0
-    working_dir: /app
+    build: ./view
     container_name: "seeds_view"
     ports:
       - "8080:8080"
     command: sh -c "npm install && npm run dev"
     volumes:
-      - ./view/next-project/:/app
+      - ./view:/app
     stdin_open: true
     tty: true
     environment:
